// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Site admin user info nav bar test Basic render test (has no transcript link) 1`] = `
<DocumentFragment>
  <div
    class="site-admin-card site-admin-user-nav-bar"
    css="__inline_css_extracted_to_hashed_class_name"
  >
    <div
      class="site-admin-user-identity"
    >
      <img
        class="avatar avatar avatar-color-6"
        src="unresolved-user-avatar.png"
      />
      <span
        class="username"
        rel="author"
      />
      <div
        class="actions"
      >
        <span
          class="email"
        >
          <a
            href="mailto:testUser@test.com"
          >
            Email
          </a>
        </span>
        <div
          class="nti-link-to-path profile"
          to="#"
        >
          <i
            class="icon-goto"
          />
          <span>
            Profile
          </span>
        </div>
      </div>
    </div>
    <div
      class="site-admin-tabs-container"
    >
      <ul
        class="unadorned-list site-admin-tabs"
      >
        <li>
          <div
            class="nti-link-to-path"
            to="./"
          >
            <span>
              Overview
            </span>
          </div>
        </li>
        <li />
        <li />
        <li />
        <li />
        <li>
          <div
            class="nti-link-to-path"
            to="./reports"
          >
            <span>
              Reports
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Site admin user info nav bar test Basic render test (has transcript link) 1`] = `
<DocumentFragment>
  <div
    class="site-admin-card site-admin-user-nav-bar"
    css="__inline_css_extracted_to_hashed_class_name"
  >
    <div
      class="site-admin-user-identity"
    >
      <img
        class="avatar avatar avatar-color-6"
        src="unresolved-user-avatar.png"
      />
      <span
        class="username"
        rel="author"
      />
      <div
        class="actions"
      >
        <span
          class="email"
        >
          <a
            href="mailto:testUser@test.com"
          >
            Email
          </a>
        </span>
        <div
          class="nti-link-to-path profile"
          to="#"
        >
          <i
            class="icon-goto"
          />
          <span>
            Profile
          </span>
        </div>
      </div>
    </div>
    <div
      class="site-admin-tabs-container"
    >
      <ul
        class="unadorned-list site-admin-tabs"
      >
        <li>
          <div
            class="nti-link-to-path"
            to="./"
          >
            <span>
              Overview
            </span>
          </div>
        </li>
        <li />
        <li />
        <li>
          <div
            class="nti-link-to-path"
            to="./administered-courses"
          >
            <span>
              Administered Courses
            </span>
          </div>
        </li>
        <li>
          <div
            class="nti-link-to-path"
            to="./transcript"
          >
            <span>
              Transcript
            </span>
          </div>
        </li>
        <li>
          <div
            class="nti-link-to-path"
            to="./reports"
          >
            <span>
              Reports
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="site-admin-card"
    css="__inline_css_extracted_to_hashed_class_name"
  >
    <button
      class="nti-button button primary medium pv-md ph-xl"
      tabindex="0"
    >
      <div
        data-button-label="true"
      >
        Update Email
      </div>
    </button>
  </div>
</DocumentFragment>
`;
